Fixing issue where Octo Raf is still appearing on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ p {
   #slide-desktop {
     display: none;
   }
-  #octo-raf {
+  img#octo-raf {
     display: none;
   }
 }
@@ -76,7 +76,7 @@ p {
   #slide-desktop {
     display: none;
   }
-  #octo-raf {
+  img#octo-raf {
     display: none;
   }
 }
